[package]
name = "solvers"
version = "0.0.1"
edition = "2021"

[lib]
name = "solvers"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "solvers"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.6"
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
ethereum-types = "0.14"
futures = "0.3.30"
hex = "0.4"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = "0.14"
itertools = "0.11"
num = "0.4"
prometheus = "0.13"
prometheus-metric-storage = "0.5.0"
reqwest = "0.11"
serde = "1"
serde_json = "1"
serde_with = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
web3 = "0.19"

contracts = { git = "https://github.com/cowprotocol/services.git", tag = "v2.258.0", package = "contracts" }
ethrpc = { git = "https://github.com/cowprotocol/services.git", tag = "v2.258.0", package = "ethrpc" }
observe = { git = "https://github.com/cowprotocol/services.git", tag = "v2.258.0", package = "observe" }
shared = { git = "https://github.com/cowprotocol/services.git", tag = "v2.258.0", package = "shared" }
dto =  { git = "https://github.com/cowprotocol/services.git", tag = "v2.255.0", package = "solvers-dto" }
rate-limit =  { git = "https://github.com/cowprotocol/services.git", tag = "v2.258.0", package = "rate-limit" }

[dev-dependencies]
glob = "0.3"
tempfile = "3"
